# Grabadora_Intento4

./: README.md  pyproject.toml
.github/workflows/: ci.yml
QA/: CHECKLIST.md
docs/: api.md  licencia.md  solo-local.md
scripts/: clean_editable.py  run_backend_checks.py  windows_quickstart.ps1
src/grabadora/: __init__.py  cli.py  disclaimer.py  gui.py  licensing.py  recorder.py
src/transcriptor/: __init__.py  __main__.py  cli.py  config.py  constants.py  disclaimer.py  gui.py  license.py  license_service.py  license_tokens.py  logging_utils.py  theme.py  transcription.py
src/transcriptor/api/: __init__.py  _selftest_audio.py  app.py  jobs.py  models.py
src/transcriptor/devtools/: __init__.py  editable.py
src/transcriptor/launcher/: __init__.py
src/transcriptor/summarizer/: __init__.py  engine.py  exporters.py  templates.py
src/transcriptor/transcription/: __init__.py  engine.py  transcription.py
src/transcriptor/ui_static/: 404.html  ajustes.html  ajustes.txt  dashboard.html  dashboard.txt  index.html  index.txt  jobs.html  jobs.txt  licencia.html  licencia.txt  logs.html  logs.txt  resumenes.html  resumenes.txt  transcribir.html  transcribir.txt
src/transcriptor/ui_static/_next/static/chunks/: 336-cf61c7b242589461.js  880-b797e8a7d3ac4989.js  954-58730e57ef40c422.js  main-app-fcd2278d620c0173.js  main-e19a9118226b1588.js
src/transcriptor/ui_static/_next/static/css/: 0a5669def082b6ed.css
ui-next/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui-next/app/: layout.tsx  page.tsx  providers.tsx
ui-next/app/(app)/: layout.tsx
ui-next/app/(app)/ajustes/: page.tsx
ui-next/app/(app)/dashboard/: page.tsx
ui-next/app/(app)/jobs/: page.tsx
ui-next/app/(app)/licencia/: page.tsx
ui-next/app/(app)/logs/: page.tsx
ui-next/app/(app)/resumenes/: page.tsx
ui-next/app/(app)/transcribir/: page.tsx
ui-next/components/: job-table.tsx  license-panel.tsx  sidebar.tsx  stat-card.tsx  summary-generator.tsx  top-bar.tsx  transcribe-form.tsx
ui-next/lib/: api.ts  config.ts  jobs.ts  license.ts  summaries.ts
ui-next/scripts/: run-checks.mjs
ui-next/styles/: globals.css
(+10 files in other folders)
