[project]
name = "grabadora-intento4"
version = "1.0.0"
description = "Aplicación de línea de comandos para grabar audio con licenciamiento ligero y descargos de responsabilidad formales."
authors = [
  { name = "Grabadora Team" }
]
requires-python = ">=3.9"
dependencies = [
  "sounddevice>=0.4.6",
  "typer[all]>=0.9.0",
  "rich>=13.7.0"
]
readme = "README.md"

[project.scripts]
grabadora = "grabadora.cli:app"
grabadora-gui = "grabadora.gui:run"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
