[project]
name = "transcriptor-feria"
version = "2.0.1"
description = "Transcriptor de FERIA: GUI oscura y clara, licencias HMAC y motor faster-whisper listo para empaquetar en .exe."
authors = [
  { name = "Transcriptor Team" }
]
requires-python = ">=3.9"
dependencies = [
  "faster-whisper>=1.0.0",
  "pydub>=0.25.1",
  "rich>=13.7.0",
  "typer[all]>=0.9.0",
  "tkinterdnd2>=0.3.0; platform_system=='Windows'",
  "language-tool-python>=2.7.0",
]
readme = "README.md"

[project.scripts]
transcriptor = "transcriptor.cli:app"
transcriptor-gui = "transcriptor.gui:run"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
