[project]
name = "transcriptor-feria"
version = "3.0.0"
description = "Transcriptor de FERIA: GUI oscura y clara, licencias HMAC y motor faster-whisper listo para empaquetar en .exe."
authors = [
  { name = "Transcriptor Team" }
]
requires-python = ">=3.9"
dependencies = [
  "faster-whisper>=1.0.0",
  "pydub>=0.25.1",
  "rich>=13.7.0",
  "typer[all]>=0.9.0",
  "tkinterdnd2>=0.3.0; platform_system=='Windows'",
  "language-tool-python>=2.7.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pyjwt[crypto]>=2.9.0",
  "pydantic>=2.7.0",
  "python-docx>=1.1.0",
  "pystray>=0.19.5",
  "Pillow>=10.3.0",
]
readme = "README.md"

[project.scripts]
transcriptor = "transcriptor.cli:app"
transcriptor-gui = "transcriptor.gui:run"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
